Add jna dependencies and spotless plugins