@@ -1,3 +1,4 @@
+import com.diffplug.spotless.kotlin.KtfmtStep
 import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 
 plugins {
@@ -6,6 +7,7 @@ plugins {
     alias(libs.plugins.kotlin)
     alias(libs.plugins.intelliJPlatform)
     alias(libs.plugins.changelog)
+    alias(libs.plugins.spotless)
 }
 
 group = providers.gradleProperty("pluginGroup").get()
@@ -33,6 +35,7 @@ repositories {
 }
 
 dependencies {
+    implementation(libs.jna)
     testImplementation(libs.junit4)
 
     // IntelliJ Platform Gradle Plugin Dependencies Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html
@@ -40,4 +43,33 @@ dependencies {
         intellijIdea(providers.gradleProperty("platformVersion"))
         testFramework(TestFrameworkType.Platform)
     }
+}
+
+spotless {
+    kotlin {
+        // version, style and all configurations here are optional
+        ktfmt("0.62").googleStyle().configure {
+            it.setMaxWidth(180)
+            it.setBlockIndent(4)
+            it.setContinuationIndent(4)
+            it.setRemoveUnusedImports(false)
+            it.setTrailingCommaManagementStrategy(KtfmtStep.TrailingCommaManagementStrategy.NONE)
+        }
+        target("src/*/kotlin/**/*.kt", "src/*/java/**/*.kt")
+    }
+    kotlinGradle {
+        target("*.gradle.kts")
+        ktfmt("0.62").googleStyle().configure {
+            it.setMaxWidth(180)
+            it.setBlockIndent(4)
+            it.setContinuationIndent(4)
+            it.setRemoveUnusedImports(true)
+        }
+    }
+}
+
+tasks.test {
+    useJUnit()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+    systemProperty("java.library.path", file("src/main/resources").absolutePath)
 }
